--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~2.2.0",
     "@angular/platform-browser-dynamic": "~2.2.0",
     "@angular/router": "~3.2.0",
+    "@types/lodash": "^4.14.41",
     "angular-in-memory-web-api": "~0.1.15",
     "core-js": "^2.4.1",
     "moment": "^2.17.0",
